--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "6.1.0",
+    "joi": "^17.13.3",
     "mysql2": "^3.9.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
