--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "mysql2": "^3.9.2",
+    "nest-winston": "^1.10.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
