Feat: Redis를 이용한 분산락 구현

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: e-commerce
+
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
