--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "joi": "^17.13.3",
     "mysql2": "^3.9.2",
     "nest-winston": "^1.10.1",
+    "redlock": "5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
