--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:it": "jest --config ./test/it/it.jest.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -29,6 +30,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "6.2.1",
     "@songkeys/nestjs-redis": "^10.0.0",
+    "axios-mock-adapter": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.2",
