--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^11.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -37,6 +38,7 @@
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.2",
     "joi": "^17.13.3",
+    "kafkajs": "^2.2.4",
     "mysql2": "^3.9.2",
     "nest-winston": "^1.10.1",
     "redlock": "5.0.0-beta.2",
