--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^11.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "6.2.1",
